update everything